app/styles/app.scss
@import 'bootstrap';
@import 'font-awesome';
@import 'ember-power-select';

@import 'base';

@import 'pod-styles';
@import 'daterangepicker.scss';
@import 'c3';
@import 'registration' ;


/* Index Style */

.index-search-section {
    min-height: 700px;
    background: #C5D6E6 url('images/bg6.jpg') top center repeat-y;
    background-size: cover;
}

.index-source-section {
    background: #C5D6E6 url('images/bg7.jpg') top center repeat-y;
    background-size: cover;
}

.index-jumbo {
    padding-bottom: 40px ;
}

.index-background {
    display: block ;
    margin-left: auto ;
    margin-right: auto ;
    height: 20% ;
    width: 20% ;
}

.index-search-row {
    margin-left: 15px;
    margin-right: 15px;
}

#index-row {
    display: flex ;
    justify-content: center ;
}

#index-tile-row {
    display: flex ;
    justify-content: center ;
    padding-top: 40px;
    flex-wrap: wrap ;
    margin-left: 25px;
    margin-right: 25px;
    text-align: center;
}

.index-tile {
    margin-left: auto;
    margin-right: auto;
    padding: 25px;
    display: block;
}

.form-control {
    font-size: 12px ;
    width: 100% ;
}

.index-advanced {
    font-size: 12px ;
}

.index-info {
    background-color: white ;
    padding-top: 25px ;
    padding-bottom: 25px ;
    background-size: cover ;
}

.index-provider {
    min-height: 400px ;
    padding-top: 25px ;
    padding-bottom: 25px ;
}

.index-provider-title {
    color: rgb(224, 235, 243) ;
    font-family: 'Yanone Kaffeesatz' , sans-serif;
    font-weight: bold ;
    font-size: 40px ;
    padding-left: 15px;
    padding-right: 15px;
    display: flex ;
    justify-content: center ;
}

#index-provider-tile {
    display: flex ;
    justify-content: center ;
    flex-wrap: wrap ;
}

.index-footer {
    background-color: #dce6ef ;
    padding: 10px ;
}

#index-copyright {
    display: flex ;
    justify-content: center ;
}

.share-search {
    .search-button {
        margin-left: -20px;
        margin-top: 5px;
        font-size: 150%;
    }

    .feed-button {
        margin-left: 5px;
        margin-top: 5px;
        font-size: 150%;
    }
}

/* Discover */

.discover-filter-block {
    border-radius: 5px;
    color: white;
    padding-top: 2px;
    padding-bottom: 2px;
    padding-left: 4px;
    padding-right: 4px;
    margin: 2px;
    background: gray;
    display: inline-block;
    font-size: 75%;
    cursor: pointer;
}

.discover-filter-block:hover {
    color: white;
    background: gray;
    text-decoration: none;
}

.discover-filter-list {
    padding-top: 8px;
}

.clear-filters {
    background-color: #f5f5f5;
    color: #204762;
}

.btn-select {
    background-color: #f5f5f5;
    color: #204762;
    height: 33px ;
    font-size: 14px ;
    border-color: #ccc ;
}

.no-results {
    font-size: 15px ;
    color: #204762;
}

.title-container {
    padding-top: 60px;
    padding-bottom: 60px;
    font-size: 24px;

    position: relative;
    padding: 30px 0;
    text-align: center;
    text-shadow: 0 1px 0 rgba(0,0,0,.1);
    background-color: #EEE;

    text-align: center;

    h1 {
      margin-top: 0;
      line-height: 1;
      font-size: 40px;
    }

    p {
      color: grey;
      font-size: 18px;
      font-weight: 300;
      line-height: 1.4;
      margin-bottom: 0px;
    }

    .retraction-alert {
        text-align: left;
        font-size: 14px;
        padding: 10px 30px;
    }
}

hr.divider {
  margin-top: 0px;
  margin-bottom: 10px;
}

/* Work */

.work-back-arrow-block {
    text-align: left;
}

.work-back-arrow {
    color: black;
    cursor: pointer;
}

